--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,130 +7,114 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.aghaasad.tictac.MainActivity">
+    tools:context="com.example.aghaasad.tictac.MainActivity"
+    android:background="#fcfe88">
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="440dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:columnCount="3"
         android:rowCount="3"
         android:background="@drawable/table"
-        android:layout_alignParentEnd="true">
+        android:visibility="visible">
 
         <ImageView
-            android:layout_width="90dp"
+            android:layout_width="70dp"
             android:layout_height="90dp"
             android:id="@+id/imageView"
             android:layout_row="0"
             android:layout_column="0"
-            android:src="@drawable/tik"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="dropin"/>
+
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="30dp" />
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:id="@+id/imageView7"
-            android:layout_row="0"
-            android:layout_column="1"
-            android:src="@drawable/tik"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="dropin"/>
-
-        <ImageView
-            android:layout_width="90dp"
+            android:layout_width="70dp"
             android:layout_height="90dp"
             android:id="@+id/imageView4"
             android:layout_row="0"
-            android:layout_column="2"
-            android:src="@drawable/tik"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="dropin"/>
+            android:layout_column="1"
+
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            />
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:id="@+id/imageView5"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:src="@drawable/tik"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="dropin"/>
-
-        <ImageView
-            android:layout_width="90dp"
+            android:layout_width="70dp"
             android:layout_height="90dp"
             android:id="@+id/imageView3"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="dropin" />
+            android:layout_row="0"
+            android:layout_column="2"
+
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="30dp"
+            />
 
         <ImageView
-            android:layout_width="90dp"
+            android:layout_width="70dp"
             android:layout_height="90dp"
             android:id="@+id/imageView2"
             android:layout_row="1"
+            android:layout_column="0"
+
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="30dp"
+           />
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="90dp"
+            android:id="@+id/imageView7"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            />
+
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="90dp"
+            android:id="@+id/imageView8"
+            android:layout_row="1"
             android:layout_column="2"
-            android:src="@drawable/tik"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
+
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="30dp"
             android:onClick="dropin"/>
 
         <ImageView
-            android:layout_width="90dp"
+            android:layout_width="70dp"
             android:layout_height="90dp"
             android:id="@+id/imageView6"
             android:layout_row="2"
             android:layout_column="0"
-            android:src="@drawable/tik"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="dropin"/>
+
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="40dp"
+           />
 
         <ImageView
-            android:layout_width="90dp"
+            android:layout_width="70dp"
             android:layout_height="90dp"
             android:id="@+id/imageView9"
             android:layout_row="2"
             android:layout_column="1"
-            android:src="@drawable/tik"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
+
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
             android:onClick="dropin"/>
 
         <ImageView
-            android:layout_width="90dp"
+            android:layout_width="70dp"
             android:layout_height="90dp"
-            android:id="@+id/imageView8"
+            android:id="@+id/imageView5"
             android:layout_row="2"
             android:layout_column="2"
-            android:src="@drawable/tik"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="dropin"/>
+
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="50dp"
+           />
     </GridLayout>
 </RelativeLayout>
